# cli

./: pyproject.toml  requirements.txt
latexmt_cli/: __init__.py  __main__.py  args.py
