[project]
name = "latexmt-cli"
version = "1.0.1"
authors = [
  { name="Calvin Hoy", email="calvin.hoy@screee.ee" },
]
description = "CLI for LaTeXMT"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: Linux",
]
dependencies = [
  "latexmt-core",
  "argparse"
]

[project.scripts]
latexmt = "latexmt_cli:main"

[project.urls]
Homepage = "https://github.com/latexmt/cli"
Issues = "https://github.com/latexmt/cli/issues"
